// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SVGIcon /> FullScreen story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="min(100%, 100vh)"
  style="color: currentColor;"
  viewBox="0 0 24 24"
  width="min(100%, 100vh)"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;

exports[`<SVGIcon /> InText story renders snapshot 1`] = `
<p
  class="typography sizeH1 colorBase"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="svgIcon"
    fill="currentColor"
    style="color: currentColor;"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
  , 1em), but often looks better with the line height (
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    style="color: currentColor;"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
    />
  </svg>
  , 2rem) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<SVGIcon /> Large story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="4em"
  style="color: currentColor;"
  viewBox="0 0 24 24"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;

exports[`<SVGIcon /> Medium story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="2em"
  style="color: currentColor;"
  viewBox="0 0 24 24"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;

exports[`<SVGIcon /> Small story renders snapshot 1`] = `
<svg
  class="svgIcon"
  fill="currentColor"
  height="1em"
  style="color: currentColor;"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
  />
</svg>
`;
